# 2D-Map

./: .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  package-lock.json  package.json  start.sh
public/: index.html
server/: Logger.ts  interfaces.ts  main.ts  message.fbs  package-lock.json  package.json  server.ts  test.txt  utils.ts
server/JSON/: MarkerSettings.json  PolygonIcons.json  Routes.json  SessionSettings.json
server/TcpConnection/: CASConnection.ts  ConnectionInterval.ts  TcpConnection.ts  types.ts
server/TcpConnection/SoftwareModules/: CSMConnection.ts  MBConnection.ts
server/addon/: addon.cc  binding.gyp  package-lock.json  package.json
server/addons/flexbuffer_helper/: CMakeLists.txt  addon.cc  binding.gyp  helper_ts.cpp  helper_ts.h  main.cpp
server/addons/flexbuffer_helper/json2/libs/build-json-Desktop_Qt_6_2_2_GCC_64bit-Debug/: CMakeCache.txt  DartConfiguration.tcl  qtcsettings.cmake
server/cpp/: CMakeLists.txt  hello.cc
server/m-b/msg/: choose_sync_mode.ts  choose_sync_mode_resp.ts  create_object.ts  (+49 more)
src/: App.tsx  CommonTooltip.tsx  DetectPolygonManager.ts  FeatureInfoModal.tsx  MapObject.tsx  MapWrapper.tsx  MapsCreator.tsx  RLayersMap.tsx  StyledButton.ts  api.ts  getCookie.ts  index.css  index.tsx  react-app-env.d.ts  rlayersMap.css  useData.ts  wsTypes.ts
src/components/: NewSidebar.tsx  Panel.tsx  Select.tsx  Sidebar.tsx
src/store/: drawingSettingsSlice.ts  errorLogSlice.ts  featuresDataSlice.ts  mapSlice.ts  modelSettingsSlice.ts  pinObjectsSlice.ts  sidebarSlice.ts  store.ts  widgetSettingsSlice.ts  zoomLevelSlice.ts
(+32 files in other folders)
